# agro_extension_digital_project

./: .gitignore  README.md
.devcontainer/: devcontainer.json
agent-aa-app/: Dockerfile  deploy-agent.sh  main.py  pyproject.toml
agents/: .env  Dockerfile  main.py  pyproject.toml
agents/agent_aa_app/: __init__.py  agent.py  prompts.py  system_prompts.py  tools.py
agents/agent_aa_app/prompts/agent_aa/: instruction.md
agents/agent_aa_app/prompts/agent_aa_bq/: description.md  instruction.md
agents/agent_aa_app/prompts/agent_aa_rag/: description.md  instruction.md
agents/agent_pp_app/: agent.py  prompts.py  tools.py
agents/agent_pp_app/prompts/agent_pp/: instruction.md
agents/agent_pp_app/prompts/agent_pp_bq/: description.md  instruction.md
agents/agent_pp_app/prompts/agent_pp_rag/: description.md  instruction.md
agents/agent_pp_app/prompts/text2sql/: instruction.md
agents/utils/: langgraph_agent.py
cicd/: benchmark_performance.sh  root.hcl  validate_infrastructure.sh
data_model/: README.md  sample.json
webhook-application/: Dockerfile  IMPROVEMENT_PROPOSAL.md  IMPROVEMENT_PROPOSAL_V2.md  IMPROVEMENT_PROPOSAL_V3.md  REFACTOR_PLAN.md  SEQUENCE_DIAGRAM.md  main.py  pyproject.toml
webhook-application/docs/: LOGGING_CONFIGURATION.md  MESSAGES_REFACTORING.md  REFACTORING_SUMMARY.md  URL_FIXES.md
webhook-application/tests/: conftest.py  test_audio_processing.py  test_final_hola_mundo.py  test_functional_audio.py  test_integration_audio.py  test_quick_audio.py  test_whatsapp_urls.py
webhook-application/whatsapp-webhook/: deploy.sh  main.py  requirements.txt
webhook-application/whatsapp_webhook/: README.md  STRUCTURE_REORGANIZATION.md  TYPING_INDICATOR_IMPLEMENTATION.md  UTILS_MODULES.md  __init__.py  app.py  message_types.py  messages.py  sessions.py  transcription.py  utils.py
webhook-application/whatsapp_webhook/api/: __init__.py  webhooks.py
webhook-application/whatsapp_webhook/auth/: __init__.py  google_auth.py
webhook-application/whatsapp_webhook/external_services/: __init__.py  agent_client.py  whatsapp_actions.py  whatsapp_client.py  whatsapp_enhanced.py
webhook-application/whatsapp_webhook/models/: __init__.py  api_models.py  messages.py
webhook-application/whatsapp_webhook/utils/: __init__.py  app_config.py  config.py  helpers.py  logging.py  model_utils.py  temp_file_manager.py
whatsapp-webhook/: main.py  requirements.txt
(+34 files in other folders)
